syntax = "proto3";


import "services/posts/post.proto";
import "services/maps/map.proto";
import "services/locations/location.proto";
import "services/images/image.proto";
import "services/modules/module_type.proto";

package pb;

option go_package = "github.com/the-medo/talebound-backend/pb";

enum EntityType {
  ENTITY_TYPE_UNKNOWN = 0;
  ENTITY_TYPE_POST = 1;
  ENTITY_TYPE_MAP = 2;
  ENTITY_TYPE_LOCATION = 3;
  ENTITY_TYPE_CHARACTER = 4;
  ENTITY_TYPE_IMAGE = 5;
}

enum EntityGroupStyle {
  ENTITY_GROUP_STYLE_UNKNOWN = 0;
  ENTITY_GROUP_STYLE_FRAMED = 1;
  ENTITY_GROUP_STYLE_NOT_FRAMED = 2;
}

enum EntityGroupDirection {
  ENTITY_GROUP_DIRECTION_UNKNOWN = 0;
  ENTITY_GROUP_DIRECTION_VERTICAL = 1;
  ENTITY_GROUP_DIRECTION_HORIZONTAL = 2;
}

message Entity {
  int32 id = 1;
  int32 moduleId = 2;
  EntityType type = 3;
  optional int32 postId = 4;
  optional int32 mapId = 5;
  optional int32 locationId = 6;
  optional int32 imageId = 7;
}

message EntityList {
  repeated Entity entities = 1;
  repeated ViewPost posts = 2;
  repeated ViewMap maps = 3;
  repeated ViewLocation locations = 4;
  repeated Image images = 5;
}

message EntityGroup {
  int32 id = 1;
  optional string name = 2;
  optional string description = 3;
  EntityGroupStyle style = 4;
  EntityGroupDirection direction = 5;
}

message EntityGroupContent {
  int32 id = 1;
  int32 entityGroupId = 2;
  int32 position = 3;
  optional int32 contentEntityId = 4;
  optional int32 contentEntityGroupId = 5;
}

message ViewEntity {
  int32 id = 1;
  EntityType type = 2;
  optional int32 postId = 3;
  optional int32 mapId = 4;
  optional int32 locationId = 5;
  optional int32 imageId = 6;
  int32 moduleId = 7;
  ModuleType moduleType = 8;
  int32 moduleTypeId = 9;
  repeated int32 tags = 10;
}